Fixed bugs found during testing
